# jack-django

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  railway.toml
config/: api.py  settings.py  urls.py
static/css/: tailwind.css
templates/: base.html  home.html
users/: api.py  models.py
users/migrations/: 0001_initial.py
