[project]
name = "jack-django"
version = "0.1.0"
description = "Django starter with Postgres, Redis, Celery, Tailwind, HTMX, and Django-Bolt"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<6.0",
    "django-environ>=0.12.0",
    "django-htmx>=1.21.0",
    "django-tailwind-cli>=2.16.0",
    "django-bolt>=0.6.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",
    "gunicorn>=23.0.0",
    "whitenoise>=6.8.0",
    "msgspec>=0.19.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.0.0",
    "ruff>=0.9.0",
    "ty>=0.0.1a7",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = [".", "config", "users"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "DJ",   # flake8-django
    "SIM",  # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["config", "users"]

[tool.ruff.format]
quote-style = "double"

[tool.ty]
[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
possibly-unresolved-reference = "warn"
